// Vitest Snapshot v1

exports[`color > 42 > cmyk 1`] = `
[
  0.79,
  1,
  0.73,
  1,
]
`;

exports[`color > 42 > colorByCSSColorSpace 1`] = `
[
  0.7965,
  1,
  0.7319,
]
`;

exports[`color > 42 > cssSupportedFunction 1`] = `"hsla"`;

exports[`color > 42 > cssSupportedSpace 1`] = `"rec2020"`;

exports[`color > 42 > hsl 1`] = `
[
  135,
  1,
  1,
]
`;

exports[`color > 42 > human 1`] = `"grey"`;

exports[`color > 42 > hwb 1`] = `
[
  135,
  1,
  1,
]
`;

exports[`color > 42 > lab 1`] = `
[
  0.796542,
  91.1834,
  47.7796,
]
`;

exports[`color > 42 > lch 1`] = `
[
  0.796542,
  219.1,
  169.7,
]
`;

exports[`color > 42 > rgb 1`] = `"#8be4ab"`;

exports[`color > 42 > space 1`] = `"Rec. 709"`;

exports[`color > 1211 > cmyk 1`] = `
[
  1,
  0.89,
  1,
  0.12,
]
`;

exports[`color > 1211 > colorByCSSColorSpace 1`] = `
[
  1,
  0.8934,
  1,
]
`;

exports[`color > 1211 > cssSupportedFunction 1`] = `"color"`;

exports[`color > 1211 > cssSupportedSpace 1`] = `"rec2020"`;

exports[`color > 1211 > hsl 1`] = `
[
  335,
  0.89,
  1,
]
`;

exports[`color > 1211 > human 1`] = `"azure"`;

exports[`color > 1211 > hwb 1`] = `
[
  335,
  0.89,
  1,
]
`;

exports[`color > 1211 > lab 1`] = `
[
  1,
  -8.8934,
  56.2255,
]
`;

exports[`color > 1211 > lch 1`] = `
[
  1,
  106.8,
  179.2,
]
`;

exports[`color > 1211 > rgb 1`] = `"#eadb42"`;

exports[`color > 1211 > space 1`] = `"LMS"`;

exports[`color > 1337 > cmyk 1`] = `
[
  0.56,
  0.21,
  0.54,
  0.03,
]
`;

exports[`color > 1337 > colorByCSSColorSpace 1`] = `
[
  0.5605,
  0.2125,
  0.543,
]
`;

exports[`color > 1337 > cssSupportedFunction 1`] = `"hsl"`;

exports[`color > 1337 > cssSupportedSpace 1`] = `"display-p3"`;

exports[`color > 1337 > hsl 1`] = `
[
  94,
  1,
  0.21,
]
`;

exports[`color > 1337 > human 1`] = `"black"`;

exports[`color > 1337 > hwb 1`] = `
[
  94,
  1,
  0.21,
]
`;

exports[`color > 1337 > lab 1`] = `
[
  0.560529,
  -69.2125,
  -45.543,
]
`;

exports[`color > 1337 > lch 1`] = `
[
  0.560529,
  36.2,
  64.5,
]
`;

exports[`color > 1337 > rgb 1`] = `"#5c346b"`;

exports[`color > 1337 > space 1`] = `"ProPhoto RGB Color Space"`;
